[gd_scene load_steps=3 format=3 uid="uid://cvl03bwtn3p1k"]

[ext_resource type="Script" uid="uid://c7hv32dcnrw2u" path="res://scripts/MainMenu.gd" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://etut0cvd20x0" path="res://Kenny/Font/Kenney Future.ttf" id="2_qqg0p"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekxnf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qqg0p")
theme_override_font_sizes/font_size = 25
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qqg0p")
theme_override_font_sizes/font_size = 25
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qqg0p")
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="English" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qqg0p")
theme_override_font_sizes/font_size = 25
text = "English"

[node name="Spanish" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qqg0p")
theme_override_font_sizes/font_size = 25
text = "Español"

[node name="Japanese" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qqg0p")
theme_override_font_sizes/font_size = 25
text = "日本語"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="OnPlayPressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="OnOptionsPressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="OnQuitPressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/English" to="." method="_on_english_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/English" to="." method="OnEnglishPressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Spanish" to="." method="_on_spanish_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Spanish" to="." method="OnSpanishPressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Japanese" to="." method="OnJapanesePressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Japanese" to="." method="_on_japanese_pressed"]
